--- a/css/custom-ar.css
+++ b/css/custom-ar.css
@@ -652,7 +652,7 @@ footer {
     }
     .ad-box {
         .image {height: 242px;}
-        border: .5px solid var(--Praimary-brown);
+        border: 0.5px solid var(--Praimary-brown);
         .info {
             background-color: var(--Dark-color);
             color: var(--Secondry-brown);
@@ -914,7 +914,7 @@ footer {
     p {color: var(--Praimary-blue);}
     span {color: var(--Dark-brown);}
 }
-.proker_details {
+.broker_details {
     background-color: #F8F8F8;
     p {color: var(--Dark-brown);}
     margin-bottom: 0;
@@ -932,7 +932,7 @@ footer {
 .card-body h5.card-title {
     color: var(--Praimary-blue);
 }
-.proker_logo {
+.broker_logo {
     border-radius: 8px;
     border: .5px solid var(--Dark-color);
     background: white;
@@ -942,6 +942,52 @@ footer {
     color: var(--Dark-brown) !important;
     background: var(--Praimary-brown) !important;
     padding: 1rem !important;
+}
+
+.paging {
+    margin: 0 auto;
+    display: table;
+
+    ul.pagination {
+        display: inline-flex;
+    }
+}
+
+.broker {
+    position: relative;
+    min-height: 385px;
+    border: 0.5px solid #C0C0C0;
+    p {color: var(--Praimary-blue);}
+    p.dec{
+        color: var(--Dark-color);
+        min-height: 90px;
+        max-height: 90px;
+        overflow: hidden;
+    }
+    .img {min-height: 116px;position: relative;
+        img {
+            margin: 0;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+    }
+    .number {
+        p {color: var(--Dark-brown);}
+        i {color: var(--Dark-color);}
+        span{color: var(--Praimary-blue);}
+    }
+}
+.individual {
+    .img {
+        img{
+            border-radius: 100%;
+            width: 100px;
+            height: 100px;
+        }
+
+    }
 }
 
 
